@@ -1,5 +1,11 @@
 2008-09-29  kitone  <kitone@gna.org>
 
+	* src/utility.cc:
+	* src/utility.h:
+	Add function replace (utility namespace).
+
+2008-09-29  kitone  <kitone@gna.org>
+
 	* src/Encodings.cc:
 	* src/Encodings.h:
 	Add function convert_from_utf8_to_charset.
